# vdl

./: .clang-format  CMakeLists.txt  README.md  checkleak.sh  license  main.c  naming.txt  note.txt  vdlassert.h  vdlbt.h  vdldef.h  vdlerr.h  vdlerror.h  vdlgc.h  vdlio.h  vdlmem.h  vdlportal.h  vdlseq.h  vdlutil.h  vdlwrapper.h  vecdef.h  vecerror.h  vecgc.h  vecmem.h  vectype.h  vecutil.h
Modules/: vdlGlobalConfig.h
Modules/Backtrace/: vdlBacktrace.h  vdlBacktraceExport.h
Modules/Exception/: vdlException.h  vdlExceptionExport.h
Modules/Utility/: vdlUtility.h  vdlUtilityExport.h
Modules/array/: vdlarrdef.h  vdlarrio.h  vdlarrmem.h  vdlarrop.h  vdlscalarop.h
docs/html/: annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_c.html  globals_defs.html  globals_defs_v.html  globals_e.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_l.html  globals_o.html  globals_type.html  globals_v.html  globals_vars.html  index.html  menudata.js  struct_v_d_l___b_a_c_k_t_r_a_c_e___t-members.html  struct_v_d_l___b_a_c_k_t_r_a_c_e___t.html  struct_v_d_l___f_r_a_m_e___t-members.html  struct_v_d_l___f_r_a_m_e___t.html  struct_v_d_l___v_e_c_t_o_r___t-members.html  struct_v_d_l___v_e_c_t_o_r___t.html  struct_v_d_l___v_e_c_t_o_r___t_a_b_l_e___t-members.html  struct_v_d_l___v_e_c_t_o_r___t_a_b_l_e___t.html  vdl_8h.html  vdl_8h_source.html  vdl__1__utilities_8h.html  vdl__1__utilities_8h_source.html  vdl__2__exception_8h.html  vdl__2__exception_8h_source.html  vdl__2__exception__def_8h.html  vdl__2__exception__def_8h_source.html  vdl__3__backtrace_8h.html  vdl__3__backtrace_8h_source.html  vdl__3__backtrace__def_8h.html  (+19 more)
include/: Doxyfile  vdl.h  vdl_1_utilities.h  vdl_1_utilities_def.h  vdl_2_exception.h  vdl_2_exception_def.h  vdl_3_backtrace.h  vdl_3_backtrace_def.h  vdl_4_integer_overflow.h  vdl_4_integer_overflow_def.h  vdl_4_vector_basic.h  vdl_4_vector_basic_def.h  vdl_5_garbage_collector.h  vdl_5_garbage_collector_def.h  vdl_5_vector_basic.h  vdl_5_vector_basic_def.h  vdl_6_garbage_collector.h  vdl_6_garbage_collector_def.h  vdl_6_vector_memory.h  vdl_6_vector_memory_def.h  vdl_6_vector_portal.h  vdl_7_vector_memory.h  vdl_7_vector_memory_def.h  vdl_7_vector_portal.h  vdl_8_vector_portal.h  vdl_8_vector_portal_def.h
talk/: talk.md
tests/: test.h  test_meta.py  test_vdlassert  test_vdlassert.c  test_vdlassert.h  tests  tests.c  tests.py  tests.sh
(+41 files in other folders)
